Bug 689615 - eexec decoding error
Summary: eexec decoding error
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PS Interpreter (show other bugs)
Version: master
Hardware: PC Windows NT
: P4 normal
Assignee: Default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-15 09:24 UTC by Alex Cherepanov
Modified: 2008-12-19 08:31 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
bin_vs_hex.ps.gz - sample file (12.97 KB, application/gzip)
2007-12-15 09:28 UTC, Alex Cherepanov
Details
patch (4.21 KB, patch)
2007-12-15 15:49 UTC, Alex Cherepanov
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Cherepanov 2007-12-15 09:24:43 UTC
Since v. 7.21 Ghostscript cannot decode eexec stream in the attached file.
The sample file has been extracted from the sample file of the bug 689372,
comment #6, object 5 0 obj.

Apparently, binary vs. hex streams is misidentified.
Distiller 5  cannot process the file either but Acrobat 5 accepts the
stream inside the PDF file.
Comment 1 Alex Cherepanov 2007-12-15 09:28:45 UTC
Created attachment 3634 [details]
bin_vs_hex.ps.gz - sample file
Comment 2 Alex Cherepanov 2007-12-15 15:49:25 UTC
Created attachment 3635 [details]
patch

Don't ship space characters after eexec in embedded PDF fonts but
continue to do so in other cases.
Comment 3 Alex Cherepanov 2007-12-15 17:40:17 UTC
The patch is committed as a rev. 8443.
Regression testing shows no differences.