Don't skip space characters after eexec in embedded PDF fonts but continue to do so in other cases. Bug 689615.

DIFFERENCES:
None

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8443 a1074d23-0009-0410-80fe-cf8c14f379e6